crates/ir/tests/snapshots/lower_test__op_add_user_type.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module op_add_user_type

struct Vec2 { x: Int, y: Int }
; extern Vec2
; extern combine
; extern println

fn main() -> Unit =
  let v0: ~Vec2 = call Vec2(1, 1)
  let v1: ~Vec2 = call Vec2(3, 2)
  let v2: Vec2 = call combine(v0, v1)
  let v3: Int = project v2.0
  let v4: Unit = call println(v3)
  v4
