crates/ir/tests/snapshots/lower_test__op_eq_user_type.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module op_eq_user_type

struct Point { x: Int, y: Int }
; extern Point
; extern eq
; extern println

fn main() -> Unit =
  let v0: ~Point = call Point(1, 2)
  let v1: ~Point = call Point(1, 2)
  let v2: Bool = call eq(v0, v1)
  let v3: Unit = call println(v2)
  v3
