crates/ir/tests/snapshots/lower_test__op_ord_user_type.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module op_ord_user_type

struct Wrapper { val: Int }
; extern Wrapper
; extern lt
; extern println

fn main() -> Unit =
  let v0: ~Wrapper = call Wrapper(1)
  let v1: ~Wrapper = call Wrapper(2)
  let v2: Bool = call lt(v0, v1)
  let v3: Unit = call println(v2)
  v3
