crates/ir/tests/snapshots/lower_test__op_semigroup_direct_call.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module op_semigroup_direct_call

; extern combine
; extern println

fn apply_combine(v0: w7, v1: w7) -> w7 =
  let v2: w7 = call combine(v0, v1)
  v2

fn main() -> Unit =
  let v3: Int = call apply_combine(3, 5)
  let v4: Unit = call println(v3)
  v4
