crates/ir/tests/snapshots/lower_test__own_fn_to_own_fn_param.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module own_fn_to_own_fn_param

type Option[e] = Some#0(a) | None#1
type Ordering = LT#0 | EQ#1 | GT#2
type Result[f, g] = Ok#0(c) | Err#1(b)
type List[h] = Cons#0(d, List[d]) | Nil#1

fn f0 call_once(v0: ~() -> String) -> String =
  let v1: String = call_closure v0()
  v1

fn f1 make_fn() -> String =
  "hello"

fn f2 test() -> String =
  let v2: () -> String = make_closure(f1, [])
  let v3: String = call f0(v2)
  v3
